revert the logging-comments done for debugging the android problem